addons/kyverno/policies/betting-credit_card_gambling_ban_uk-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: betting-credit_card_gambling_ban_uk
  annotations:
    rulehub.id: betting.credit_card_gambling_ban_uk
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: "betting.credit_card_gambling_ban_uk: example validation"
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
